--- a/BlogCore/Areas/Admin/Views/Articulos/Edit.cshtml
+++ b/BlogCore/Areas/Admin/Views/Articulos/Edit.cshtml
@@ -1,16 +1,18 @@
 ﻿@model BlogCore.Models.ViewModels.ArticuloVM
 
 @{
-    ViewData["Title"] = "Crear Articulo";
+    ViewData["Title"] = "Editar Articulo";
 }
 
 <br />
 <br />
-<h3 class="text-center">Crear un nuevo articulo</h3>
-<form method="post" asp-action="Create" enctype="multipart/form-data">
+<h3 class="text-center">Editar un articulo</h3>
+<form method="post" asp-action="Edit" enctype="multipart/form-data">
+    <!-- Id del articulo como campo oculto-->
+    <input type="hidden" asp-for="Articulo.Id" />
     <div class="row px-2 offset-1 border">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <div class="col-10 offset-1 mt-4 mb-4">
+        <div class="col-8 mt-4 mb-4">
             <div class="form-group row">
                 <div class="col-4">
                     <label class="col-4">
@@ -33,7 +35,7 @@
                     </label>
                 </div>
                 <div class="col-8">
-                    <textarea asp-for="Articulo.Descripcion" class="form-control" placeholder="Ingrese la descripcion" rows="10"></textarea>
+                    <textarea asp-for="Articulo.Descripcion" class="form-control" placeholder="Ingrese la descripcion" style="height:300px;"></textarea>
                     <span asp-validation-for="Articulo.Descripcion" class="text-danger"></span>
                 </div>
             </div>
@@ -59,16 +61,21 @@
                 </div>
                 <div class="col-8">
                     <input type="file" name="archivos" id="subidaArchivo" class="form-control" />
-                    <span asp-validation-for="Articulo.UrlImagen" class="text-danger"></span>
                 </div>
             </div>
 
             <div class="form-group row">
-                <div class="col-8">
-                    <partial name="_VistaCrearVolver" />
+                <div class="col">
+                    <button type="submit" class="btn btn-primary form-control" asp-route-id="@Model.Articulo.Id">Actualizar</button>
+                </div>
+                <div class="col">
+                    <a asp-action="Index" class="btn btn-success form-control">Volver a la lista</a>
                 </div>
             </div>
 
+        </div>
+        <div class="col-4 pt-3">
+            <img src="@Model.Articulo.UrlImagen" width="100%" style="border-radius: 5px"; border:1px solid #bbb9b9 />
         </div>
 
     </div>
