--- a/BlogCore/Areas/Admin/Views/Sliders/Index.cshtml
+++ b/BlogCore/Areas/Admin/Views/Sliders/Index.cshtml
@@ -1,22 +1,22 @@
 ﻿<div class="container mt-4">
     <div class="row">
         <div class="col-8">
-            <h2 class="text-primary">Lista de Categorías</h2>
+            <h2 class="text-primary">Lista de Sliders</h2>
         </div>
         <div class="col-4 text-right">
-            <a asp-action="Create" class="btn btn-primary"> <i class="fas fa-plus"> Crear Nueva Categoría</i> </a>
+            <a asp-action="Create" class="btn btn-primary"> <i class="fas fa-plus"> Crear Nuevo Slider</i> </a>
         </div>
     </div>
 
     <br />
     <br />
 
-    <table id="tblCategorias" class="table table-striped table-bordered" style="width:100%">
+    <table id="tblSliders" class="table table-striped table-bordered" style="width:100%">
         <thead>
             <tr>
                 <th>Id</th>
                 <th>Nombre</th>
-                <th>Orden</th>
+                <th>Estado</th>
                 <th>Acciones</th>
                 <th></th>
             </tr>
@@ -26,6 +26,7 @@
 </div>
 
 @section Scripts {
-    <script src="~/js/categoria.js"></script>
+    <script src="~/js/sliders.js"></script>
 }
+
 
